# darkone-nixos-framework

./: .envrc-deactivated  .gitignore  AGENTS.md  FULL-TEST-STRATEGY.fr.md  Justfile  README.fr.md  README.md  TODO.fr.md  docs  flake.nix
.specs/: 2026-05-25-tests-simulation-design.md  IA.fr.md  SPLIT-PROJECT.fr.md  build-farm.md  matrix-authentication-service.md  yubikey.md
assets/: default.just  testing.just  treefmt.toml
config/: alerts.nix  default.nix  modules.nix  network.nix
dnf/hosts/: iso.nix  (+1 more)
home/: README.md
hosts/: iso.nix  sd-image.nix
lib/: alerts.nix  config-schema.nix  constants.nix  date-time.nix  default.nix  firewall.nix  hive.nix  homepage.nix  mk-configuration.nix  mkConfigurations.nix  networking.nix  oidc.nix  paths.nix  security.nix  service-activation.nix  service-params.nix  services.nix  srv.nix  strings.nix  topology.nix
modules/: default.nix
src/: generate.php
src/generator/: Cargo.toml  Justfile  shell.nix
src/generator/src/: error.rs  generate.rs  lib.rs  main.rs
src/generator/src/mdx_generator/: generator.rs  mdx_parser.rs  mdx_writer.rs  mod.rs  module.rs  nix_parser.rs
src/generator/src/nix_generator/: configuration.rs  mod.rs  nix_builder.rs  nix_network.rs  nix_service.rs  nix_zone.rs  validation.rs  yaml.rs
src/generator/src/nix_generator/item/: host.rs  mod.rs  user.rs
src/generator/src/nix_generator/token/: mod.rs  nix_attr_set.rs  nix_list.rs  nix_value.rs
src/generator/tests/: integration_test.rs
src/generator/tests/fixtures/: config.yaml  config_generated.yaml
tests/: README.md
usr/: config.yaml
(+558 files in other folders)
